fix: alignment issues corrected

--- a/assets/css/specificGenre.css
+++ b/assets/css/specificGenre.css
@@ -1,13 +1,15 @@
-body {
+.body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
 }
 
 #main-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
   padding: 20px;
   color: #fff;
@@ -15,10 +17,11 @@ body {
 
 .playlist-card {
   width: 250px;
-  height: 300px;
-  margin-right: 20px;
+  height: 350px;
   align-items: center;
-  justify-content: center;
+  padding-bottom: 15px;
+  justify-content: space-evenly;
+  margin: 10px;
   border-radius: 10px;
   background-color: #221818;
   text-decoration: none;
@@ -42,35 +45,55 @@ body {
 }
 
 .img_element {
-  width: 90%;
-  height: 50%;
-  object-fit: cover;
-  margin-right: 10px;
+  width: 92%;
+  height: 60%;
+  align-self: center;
+  margin-top: 5px;
+  object-fit: fill;
   padding: 10px;
+  border-radius: 20px;
 }
 
 .playlist-title,
 .description {
-  font-size: 1.5em;
-  margin: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  text-decoration: none;
+  font-size: 1em;
   color: #fff;
 }
 
 .playlist-title {
+  font-size: 1.2em;
   margin-left: 10px;
-  padding-left: 10px;
+  padding: 10px 0;
 }
 
 .description {
-  font-size: 1em;
+  font-size: 1.1em;
   padding: 10px;
   color: #888;
-  text-overflow: ellipsis;
-  text-decoration: none;
-  white-space: nowrap;
   margin-bottom: 10px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Limit to 2 lines */
+  -webkit-box-orient: vertical;
+}
+.play {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px; /* Adjust padding for a smaller button */
+  background-color: #1db954;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out; /* Smooth transition for opacity and background color */
+}
+
+.play::before {
+  content: '\f04b'; /* FontAwesome play icon */
+  font-family: 'FontAwesome'; /* Adjust the font-family based on your icon library */
+  color: #fff;
+}
+
+.playlist-card:hover .play {
+  opacity: 1; /* Show the play button on hover */
+  background-color: #000; /* Change background color on hover to black */
 }
